<resources>
    <string name="app_name">ProIFTrainTracker</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="sign_up">sign up </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="openMap">OPEN MAP</string>
    <string name="setNotif">SET NOTIFICATION</string>
    <string name="sAwal">Stasiun Awal:</string>
    <string name="sAkhir">Stasiun Akhir:</string>
    <string-array name="names">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
        <item>Costume</item>
    </string-array>


    <string name="notif">Set Notification</string>
    <string name="history">List Trip</string>
    <string name="duration">DURATION  </string>
    <string name="date">DATE  </string>
    <string name="GO">GO!</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!-- For permission refused and acceptance-->
    <string name="permission_refused">Permission was not granted</string>
    <string name="permission_request_title">Special Permission Request</string>
    <string name="app_permission_notice">This permission request is very important to your app functionality .If it is not granted your application might not work the way it is intended.</string>
    <string name="failed_draw">Empty line path return</string>
    <string name="server_error">Server error. Something went wrong with the server</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_drawer_nav">Drawer_nav</string>

    <string name="action_settings">Settings</string>

    <!--Main Menu String -->
    <string name="INTRODUCTION">Train Tracker </string>
    <string name="introteam">Dibuat untuk Tugas Proyek Informatika</string>
    <string name="next">NEXT</string>
    <string name="choose_train">Choose Your Train</string>

    <!-- List Kereta -->
    <string-array name="list_kereta">
        <item>Argo Wilis</item>
        <item>Argo Parahyangan</item>
        <item>Argo Bromo Anggrek</item>
        <item>Argo Dwipangga</item>
        <item>Argo Lawu</item>
        <item>Argo Muria</item>
        <item>Argo Sundoro</item>
        <item>Gajayana</item>
        <item>Sembrani</item>
        <item>Bima</item>
        <item>Taksaka</item>
        <item>Turangga</item>
        <item>Bangunkarta</item>
        <item>Purwojaya</item>
        <item>Lodaya</item>
        <item>Mutiara Selatan</item>
        <item>Mutiara Timur</item>
        <item>Limex Sriwijaya</item>
        <item>Ranggajati</item>
        <item>Sawunggalih Utama</item>
        <item>Sindang Marga</item>
        <item>Sribilah</item>
        <item>Fajar Utama Yogya</item>
        <item>Sawunggalih Utama</item>
        <item>Senja Utama Solo</item>
        <item>Senja Utama Yogya</item>
        <item>Sidomukti</item>
        <item>Ciremai</item>
        <item>Gumarang</item>
        <item>Harina</item>
        <item>Malabar</item>
        <item>Cirebon Ekspres</item>
        <item>Malioboro Ekspres</item>
        <item>Pangrango</item>
        <item>Sancaka</item>
        <item>Tegal Bahari</item>
        <item>Ambarawa Ekspres</item>
        <item>Bogowonto</item>
        <item>Gajah Wong</item>
        <item>Jaka Tingkir</item>
        <item>Jayabaya Utara</item>
        <item>Joglokerto</item>
        <item>Kaligung</item>
        <item>Kamandaka</item>
        <item>Krakatau</item>
        <item>Majapahit</item>
        <item>Menoreh</item>
        <item>Banten Ekspres</item>
        <item>Bengawan</item>
        <item>Brantas</item>
        <item>Cilamaya Ekspres</item>
        <item>Gaya Baru Malam</item>
        <item>Jatiluhur Ekspres</item>
        <item>Kahuripan</item>
        <item>Kalijaga</item>
        <item>Kalimaya</item>
        <item>Kertajaya</item>
        <item>Kutojaya Selatan</item>
        <item>Kutojaya Utara</item>
        <item>Langsam</item>
        <item>Logawa</item>
        <item>Maharani</item>
        <item>Matarmaja</item>
        <item>Pandanwangi</item>
        <item>Pasundan</item>
        <item>Penataran</item>
        <item>Probowangi</item>
        <item>Progo</item>
        <item>Putri Deli</item>
        <item>Rangkas Jaya</item>
        <item>Rapih Dhoho</item>
        <item>Rajabasa</item>
        <item>Serayu</item>
        <item>Siantar Ekspres</item>
        <item>Serelo</item>
        <item>Sibinuang</item>
        <item>Siliwangi</item>
        <item>Simandra</item>
        <item>Sri Tanjung</item>
        <item>Tawang Alun</item>
        <item>Tawang Jaya</item>
        <item>Tegal Ekspres</item>
        <item>Walahar Express</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string-array name="list_stasiun_argo_wilis">
        <item>Surabaya Gubeng</item>
        <item>Jombang</item>
        <item>Madiun</item>
        <item>Solo Balapan</item>
        <item>Yogyakarta</item>
        <item>Kutoarjo</item>
        <item>Kroya</item>
        <item>Banjar</item>
        <item>Tasikmalaya</item>
        <item>Cipeundeuy</item>
        <item>Bandung</item>
    </string-array>
    <string name="stasiun_tujuan">Stasiun Tujuan</string>
    <string name="stasiun_asal">Stasiun Asal</string>
    <string name="initial_speed"> 0.0 km/h </string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">Notifikasi ketika sudah mendekati tujuan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
