<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setNotif"
        android:textSize="@dimen/ukuran_judul_notif"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sAwal"
        android:layout_margin="@dimen/margin_notif"
        android:textSize="@dimen/ukuran_tulisan_notif"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sAkhir"
        android:layout_margin="@dimen/margin_notif"
        android:textSize="@dimen/ukuran_tulisan_notif"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SET"/>
</LinearLayout>