<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundimage">



    <TextView
        android:id="@+id/argo_wilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="Argo Wilis"
        android:textColor="@color/black"
        android:textSize="@dimen/ukuran_judul_notif"/>

    <TextView
        android:id="@+id/start_wilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/argo_wilis"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:textSize="@dimen/ukuran_tulisan_notif"
        android:text="@string/stasiun_asal" />

    <TextView
        android:id="@+id/end_wilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/spinner_start_wilis"
        android:text="@string/stasiun_tujuan"
        android:textSize="@dimen/ukuran_tulisan_notif" />


    <Spinner

        android:id="@+id/spinner_start_wilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/start_wilis" />

    <Spinner
        android:id="@+id/spinner_end_wilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/end_wilis"
        android:layout_marginTop="37dp" />

    <Button
        android:id="@+id/btnOpenMap"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp"
        android:background="@drawable/rounded_button"
        android:onClick="openMap"
        android:text="@string/openMap" />

</RelativeLayout>